package entities.fields;

public class Start extends Field {


    public Start(String s) {
        super(s);
    }


    @Override
    public Field executeFieldAction(FieldAction fieldAction) {
        return null;
    }
}
